[gd_scene load_steps=9 format=3 uid="uid://bccimwbgf4d0x"]

[ext_resource type="Texture2D" uid="uid://k4y2jwk7d1xt" path="res://poker/WhatsApp Image 2024-11-29 at 22.35.32.jpeg" id="1_8k8l3"]
[ext_resource type="Script" path="res://black_jack/black_jack.gd" id="1_lit83"]
[ext_resource type="Script" path="res://btn_emit.gd" id="3_s2u8f"]

[sub_resource type="Image" id="Image_4233x"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 76, 255, 255, 255, 75, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 99, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 99, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 4, 255, 255, 255, 122, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 121, 255, 255, 255, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 12, 255, 255, 255, 142, 255, 255, 255, 191, 255, 255, 255, 181, 255, 255, 255, 53, 255, 255, 255, 53, 255, 255, 255, 181, 255, 255, 255, 191, 255, 255, 255, 142, 255, 255, 255, 12, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 71, 255, 255, 255, 191, 255, 255, 255, 171, 255, 255, 255, 36, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 36, 255, 255, 255, 171, 255, 255, 255, 191, 255, 255, 255, 71, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 86, 255, 255, 255, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 22, 255, 255, 255, 86, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 86, 255, 255, 255, 22, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 22, 255, 255, 255, 86, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 71, 255, 255, 255, 191, 255, 255, 255, 171, 255, 255, 255, 36, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 36, 255, 255, 255, 171, 255, 255, 255, 191, 255, 255, 255, 71, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 12, 255, 255, 255, 142, 255, 255, 255, 191, 255, 255, 255, 181, 255, 255, 255, 53, 255, 255, 255, 54, 255, 255, 255, 182, 255, 255, 255, 191, 255, 255, 255, 142, 255, 255, 255, 12, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 4, 255, 255, 255, 121, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 121, 255, 255, 255, 4, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 98, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 98, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 75, 255, 255, 255, 75, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_dtp7g"]
image = SubResource("Image_4233x")

[sub_resource type="Theme" id="Theme_kojes"]
SpinBox/colors/color2 = Color(0.0466392, 0.51347, 0.567599, 1)
SpinBox/icons/updown = SubResource("ImageTexture_dtp7g")

[sub_resource type="LabelSettings" id="LabelSettings_x4fqi"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_40djg"]
font_color = Color(0, 0, 0, 1)

[node name="BlackJack" type="Node2D"]
script = ExtResource("1_lit83")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 317)
scale = Vector2(0.725625, 0.686081)
texture = ExtResource("1_8k8l3")

[node name="hold" type="Button" parent="."]
z_index = 1
offset_left = 467.0
offset_top = 546.0
offset_right = 517.0
offset_bottom = 577.0
text = "Hold"
script = ExtResource("3_s2u8f")

[node name="card" type="Button" parent="."]
z_index = 1
offset_left = 280.0
offset_top = 551.0
offset_right = 330.0
offset_bottom = 582.0
text = "Card"
script = ExtResource("3_s2u8f")

[node name="Label" type="Label" parent="."]
offset_left = 523.0
offset_top = 335.0
offset_right = 628.0
offset_bottom = 358.0

[node name="ins_label" type="Label" parent="."]
offset_left = 524.0
offset_top = 368.0
offset_right = 629.0
offset_bottom = 391.0

[node name="reset" type="Button" parent="."]
z_index = 1
offset_left = 329.0
offset_top = 612.0
offset_right = 434.0
offset_bottom = 643.0
text = "RESET GAME"
script = ExtResource("3_s2u8f")

[node name="own_value" type="Label" parent="."]
offset_left = 1095.0
offset_top = 546.0
offset_right = 1135.0
offset_bottom = 569.0

[node name="dealer_value" type="Label" parent="."]
offset_left = 370.0
offset_top = 156.0
offset_right = 410.0
offset_bottom = 179.0

[node name="reset_money" type="Button" parent="."]
offset_left = 20.0
offset_top = 580.0
offset_right = 189.0
offset_bottom = 611.0
text = "Reset money to 1000"
script = ExtResource("3_s2u8f")

[node name="bet_value" type="SpinBox" parent="."]
offset_left = 171.0
offset_top = 539.0
offset_right = 254.063
offset_bottom = 570.0
theme = SubResource("Theme_kojes")
min_value = 10.0
max_value = 10000.0
value = 10.0

[node name="ins_bet_val" type="SpinBox" parent="."]
offset_left = 165.0
offset_top = 457.0
offset_right = 248.063
offset_bottom = 488.0
theme = SubResource("Theme_kojes")
min_value = 10.0
max_value = 10000.0
value = 10.0

[node name="Bet" type="Label" parent="."]
offset_left = 143.0
offset_top = 514.0
offset_right = 235.0
offset_bottom = 537.0
text = "Bet amount"
label_settings = SubResource("LabelSettings_x4fqi")

[node name="insure" type="Label" parent="."]
offset_left = 156.0
offset_top = 427.0
offset_right = 248.0
offset_bottom = 450.0
text = "Insurance amount"

[node name="current_money" type="Label" parent="."]
offset_left = 39.0
offset_top = 548.0
offset_right = 79.0
offset_bottom = 571.0
text = "0"
label_settings = SubResource("LabelSettings_40djg")

[node name="money_desc" type="Label" parent="."]
offset_left = 20.0
offset_top = 523.0
offset_right = 137.0
offset_bottom = 546.0
text = "Current Money"
label_settings = SubResource("LabelSettings_40djg")

[node name="split" type="Button" parent="."]
offset_left = 376.0
offset_top = 544.0
offset_right = 418.0
offset_bottom = 575.0
text = "Split"
script = ExtResource("3_s2u8f")

[node name="insurance" type="Button" parent="."]
offset_left = 355.0
offset_top = 508.0
offset_right = 440.0
offset_bottom = 539.0
text = "Insurance"
script = ExtResource("3_s2u8f")

[node name="bet_btn" type="Button" parent="."]
offset_left = 211.0
offset_top = 493.0
offset_right = 344.0
offset_bottom = 524.0
text = "Bet (Start game)"
script = ExtResource("3_s2u8f")
